# envoix

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
SJTUBeamer/: CLAUDECODE_INSTRUCTIONS.md  proposal_slides.tex  story_map_engine_architecture_sjtu.tex
apps/envoix-apple/: README.md  project.yml
apps/envoix-apple/Assets.xcassets/AppIcon.appiconset/: Contents.json
apps/envoix-apple/Sources/: Components.swift  ContentView.swift  EnvoixApp.swift  MenuBarView.swift  PreviewFixtures.swift  ReceiveView.swift  SendView.swift  Support.swift  Theme.swift  TransferViewModel.swift
apps/envoix-cli/: Cargo.toml
apps/envoix-cli/src/: main.rs
apps/envoix-cli/tests/: cli_loopback.rs
apps/envoix-relay-server/: Cargo.toml
apps/envoix-relay-server/src/: config.rs  doctor.rs  keyfile.rs  main.rs  pair.rs  server.rs  service.rs  stats.rs  status.rs  usage.rs
apps/envoix-rendezvous-server/: Cargo.toml
apps/envoix-rendezvous-server/src/: lib.rs  main.rs
apps/envoix-rendezvous-server/tests/: iroh_loopback.rs
apps/envoix-server/: Cargo.toml
apps/envoix-server/src/: api.rs  main.rs  probe.rs
crates/envoix-auth/: Cargo.toml
crates/envoix-auth/src/: lib.rs
crates/envoix-client/: Cargo.toml
crates/envoix-client/src/: auto_lan.rs  lib.rs
crates/envoix-crypto/: Cargo.toml
crates/envoix-crypto/src/: lib.rs
crates/envoix-discovery/: Cargo.toml
crates/envoix-discovery/src/: lib.rs  manual.rs  mdns.rs
crates/envoix-error/: Cargo.toml
crates/envoix-error/src/: lib.rs
crates/envoix-ffi/: Cargo.toml
crates/envoix-ffi/src/: lib.rs
crates/envoix-pairing/: Cargo.toml
crates/envoix-pairing/src/: bundle.rs  handshake.rs  lib.rs  wire.rs
crates/envoix-protocol/: Cargo.toml
crates/envoix-protocol/src/: lib.rs
crates/envoix-qr/: Cargo.toml
crates/envoix-qr/src/: lib.rs  wordlist.rs
crates/envoix-relay/: Cargo.toml
crates/envoix-relay-pair/: Cargo.toml
crates/envoix-relay-pair/src/: bundle.rs  handshake.rs  lib.rs  wire.rs
crates/envoix-relay/src/: frame.rs  lib.rs  quota.rs  table.rs  token.rs
crates/envoix-rendezvous/: Cargo.toml
crates/envoix-rendezvous-iroh/: Cargo.toml
crates/envoix-rendezvous-iroh/src/: code.rs  lib.rs
crates/envoix-rendezvous-iroh/tests/: iroh_loopback.rs
crates/envoix-rendezvous/src/: broker.rs  capabilities.rs  error.rs  hex.rs  io.rs  lib.rs  peer.rs  probe.rs  probe_token.rs  protocol.rs  state.rs
crates/envoix-rendezvous/tests/: room_pairing.rs
crates/envoix-session/: Cargo.toml
crates/envoix-session/src/: connection.rs  endpoint.rs  identity.rs  lib.rs  room.rs
crates/envoix-session/tests/: receive_retry.rs  room_transfer.rs
crates/envoix-storage/: Cargo.toml
crates/envoix-storage/src/: lib.rs
crates/envoix-transfer/: Cargo.toml
crates/envoix-transfer/src/: lib.rs
crates/envoix-transport/: Cargo.toml
crates/envoix-transport-quic/: Cargo.toml
crates/envoix-transport-quic/src/: lib.rs
crates/envoix-transport-tcp/: Cargo.toml
crates/envoix-transport-tcp/src/: lib.rs
crates/envoix-transport/src/: lib.rs
crates/envoix-types/: Cargo.toml
crates/envoix-types/src/: lib.rs
docs/: arch.md  auth.md  mdns-testing.md  qr-pairing-review-fixes.md  qr-pairing.md  reflexive-discovery-design.md  relay-design.md  rendezvous-api.md  rendezvous-design.md  rendezvous-vs-headscale.md  self-hosted-relay-design.md
engine-arch/: api-design.md
scripts/: install-precommit.sh
src/: App.vue  router.ts  styles.css
src/components/: CopyButton.vue  DemoQr.vue
src/data/: demo.ts
src/views/: CliDemo.vue  GuiDemo.vue  MobileDemo.vue
