[workspace]
members = [
    "apps/envoix-cli",
    "apps/envoix-server",
    "apps/envoix-relay-server",
    "crates/envoix-auth",
    "crates/envoix-client",
    "crates/envoix-session",
    "crates/envoix-transfer",
    "crates/envoix-transport",
    "crates/envoix-transport-quic",
    "crates/envoix-protocol",
    "crates/envoix-discovery",
    "crates/envoix-rendezvous",
    "crates/envoix-relay",
    "crates/envoix-storage",
    "crates/envoix-types",
    "crates/envoix-error",
    "crates/envoix-qr",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
envoix-auth = { path = "crates/envoix-auth" }
envoix-client = { path = "crates/envoix-client" }
envoix-session = { path = "crates/envoix-session" }
envoix-transfer = { path = "crates/envoix-transfer" }
envoix-transport = { path = "crates/envoix-transport" }
envoix-transport-quic = { path = "crates/envoix-transport-quic" }
envoix-protocol = { path = "crates/envoix-protocol" }
envoix-discovery = { path = "crates/envoix-discovery" }
envoix-rendezvous = { path = "crates/envoix-rendezvous" }
envoix-relay = { path = "crates/envoix-relay" }
envoix-storage = { path = "crates/envoix-storage" }
envoix-types = { path = "crates/envoix-types" }
envoix-error = { path = "crates/envoix-error" }
envoix-qr = { path = "crates/envoix-qr" }
async-trait = "0.1"
axum = "0.8"
axum-test = "18"
base64 = "0.22"
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
getrandom = "0.3"
hmac = "0.12"
humantime = "2"
log = "0.4"
qrcode = { version = "0.14", default-features = false }
quinn = "0.11"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spake2 = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
