[workspace]
members = [
    "apps/envoix-cli",
    "apps/envoix-rendezvous-server",
    "crates/envoix-auth",
    "crates/envoix-client",
    "crates/envoix-error",
    "crates/envoix-pairing",
    "crates/envoix-protocol",
    "crates/envoix-rendezvous",
    "crates/envoix-qr",
    "crates/envoix-session",
    "crates/envoix-storage",
    "crates/envoix-transfer",
    "crates/envoix-types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
envoix-auth = { path = "crates/envoix-auth" }
envoix-client = { path = "crates/envoix-client" }
envoix-error = { path = "crates/envoix-error" }
envoix-pairing = { path = "crates/envoix-pairing" }
envoix-protocol = { path = "crates/envoix-protocol" }
envoix-rendezvous = { path = "crates/envoix-rendezvous" }
envoix-qr = { path = "crates/envoix-qr" }
envoix-session = { path = "crates/envoix-session" }
envoix-storage = { path = "crates/envoix-storage" }
envoix-transfer = { path = "crates/envoix-transfer" }
envoix-types = { path = "crates/envoix-types" }
async-trait = "0.1"
anyhow = "1"
base64 = "0.22"
qrcode = { version = "0.14", default-features = false }
blake3 = "1"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
getrandom = "0.3"
hmac = "0.12"
iroh = "1"
iroh-mdns-address-lookup = "0.4"
n0-future = "0.3"
num_enum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spake2 = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
