[package]
name = "envoix-relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
envoix-relay.workspace = true
clap.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
