[package]
name = "envoix-rendezvous-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "iroh-node rendezvous server: matches peers by room id and relays their end-to-end pairing handshake."

[dependencies]
envoix-pairing.workspace = true
envoix-rendezvous.workspace = true
anyhow.workspace = true
clap.workspace = true
iroh.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# The test exchanges real iroh PeerDescriptors through the broker.
envoix-protocol.workspace = true
