[package]
name = "envoix-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
blake3.workspace = true
clap.workspace = true
envoix-rendezvous.workspace = true
envoix-relay.workspace = true
envoix-types.workspace = true
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
axum-test.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["signal", "test-util"] }
