[package]
name = "envoix-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
envoix-discovery.workspace = true
envoix-auth.workspace = true
envoix-error.workspace = true
envoix-session.workspace = true
envoix-transport.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
