[package]
name = "envoix-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
envoix-auth.workspace = true
envoix-error.workspace = true
envoix-protocol.workspace = true
envoix-session.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
