[package]
name = "envoix-qr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
envoix-protocol.workspace = true
envoix-types.workspace = true
base64.workspace = true
getrandom.workspace = true
iroh.workspace = true
qrcode.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
