[package]
name = "envoix-relay-pair"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SPAKE2-based pairing that hands a custom relay's master key + port range to a client over an untrusted channel."

[dependencies]
blake3.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
spake2.workspace = true
thiserror.workspace = true
