[package]
name = "envoix-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
envoix-auth.workspace = true
envoix-error.workspace = true
envoix-protocol.workspace = true
envoix-rendezvous-iroh.workspace = true
envoix-transfer.workspace = true
envoix-types.workspace = true
base64.workspace = true
iroh.workspace = true
iroh-mdns-address-lookup.workspace = true
n0-future.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
envoix-rendezvous.workspace = true
tempfile.workspace = true
