[package]
name = "envoix-transport-quic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
envoix-error.workspace = true
envoix-protocol.workspace = true
envoix-transport.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
tokio.workspace = true
